All features of the plan have been implemented in beta versions.
